--- a/potato.css
+++ b/potato.css
@@ -20,6 +20,7 @@ h1 {
 /* Insert CSS for body below this line*/
 #body { top: 28px; left: 68px; }
 /* Insert CSS for arms below this line*/
+#arms_image{ top:185px; left:20px;}
 
 /* Insert CSS for ears below this line*/
 
