eyes from prince

--- a/potato.css
+++ b/potato.css
@@ -24,7 +24,7 @@ h1 {
 /* Insert CSS for ears below this line*/
 
 /* Insert CSS for eyes below this line*/
-
+#eyes_image { top: 60px; left: 130px; }
 /* Insert CSS for mouth below this line*/
 
 /* Insert CSS for nose below this line*/
