--- a/potato.css
+++ b/potato.css
@@ -20,7 +20,7 @@ h1 {
 /* Insert CSS for body below this line*/
 #body { top: 28px; left: 68px; }
 /* Insert CSS for arms below this line*/
-
+#earrings{top: 30px; left: 50px;}
 /* Insert CSS for ears below this line*/
 
 /* Insert CSS for eyes below this line*/
