--- a/potato.css
+++ b/potato.css
@@ -2,7 +2,6 @@ h1 {
   text-align: center;
 }
 
-
 #potato {
   position: relative;
   width: 367px;
@@ -24,7 +23,7 @@ h1 {
 /* Insert CSS for ears below this line*/
 
 /* Insert CSS for eyes below this line*/
-
+#eyes_image {top : 30px; left: 150px;}
 /* Insert CSS for mouth below this line*/
 
 /* Insert CSS for nose below this line*/
