--- a/potato.css
+++ b/potato.css
@@ -48,5 +48,5 @@ h1 {
 /* Insert CSS for arms below this line*/
 
 /* Insert CSS for hatflower below this line*/
-
+#hatflower { top:-28px; left:65px;}
 /* Insert CSS for boosters below this line*/
