--- a/potato.css
+++ b/potato.css
@@ -32,7 +32,7 @@ h1 {
 /* Insert CSS for eyebrows below this line*/
 
 /* Insert CSS for glasses below this line*/
-
+#glasses_image{top:68px; left:100px;}
 /* Insert CSS for hat below this line*/
 
 /* Insert CSS for arms below this line*/
