--- a/potato.css
+++ b/potato.css
@@ -40,7 +40,7 @@ h1 {
 /* Insert CSS for moustache below this line*/
 
 /* Insert CSS for shoes below this line*/
-
+#shoes_image{ top: 299px; left: 45px;}
 /* Insert CSS for cane below this line*/
 
 /* Insert CSS for earrings below this line*/
