added body part shoes

--- a/potato.css
+++ b/potato.css
@@ -41,6 +41,7 @@ h1 {
 
 /* Insert CSS for shoes below this line*/
 
+  #shoes_image { right: 70px; bottom: 106px; }
 /* Insert CSS for cane below this line*/
 
 /* Insert CSS for earrings below this line*/
