--- a/potato.css
+++ b/potato.css
@@ -22,6 +22,10 @@ h1 {
 /* Insert CSS for arms below this line*/
 
 /* Insert CSS for ears below this line*/
+#ears_image{
+    left: 61px;
+    top: 107px;
+}
 
 /* Insert CSS for eyes below this line*/
 
